Switched to JEAF Maven Plugin 1.8.0

--- a/pom.xml
+++ b/pom.xml
@@ -26,7 +26,7 @@
 	
 	<properties>
 		<!-- Properties for versions of JEAF Maven Plugins -->
-		<maven.jeaf-plugin.version>1.6.18-SNAPSHOT</maven.jeaf-plugin.version>
+		<maven.jeaf-plugin.version>1.8.0</maven.jeaf-plugin.version>
 
 		<jeaf.x-fun.api.version>1.8.0</jeaf.x-fun.api.version>
 		<jeaf.x-fun.impl.version>1.8.0</jeaf.x-fun.impl.version>
