--- a/jeaf-generator-test-open-api/pom.xml
+++ b/jeaf-generator-test-open-api/pom.xml
@@ -137,6 +137,7 @@
 
 					<!-- Define what should be generated. By default nothing is generated. -->
 					<generateOpenAPISpec>true</generateOpenAPISpec>
+					<validateOpenAPISpec>true</validateOpenAPISpec>
 					<enableYAML11Compatibility>true</enableYAML11Compatibility>
 
 					<!-- Define information that are written to file headers -->
