--- a/pom.xml
+++ b/pom.xml
@@ -53,6 +53,7 @@
 		<spring.core.version>5.3.27</spring.core.version>
 		<jakartaee-api.version>9.1.0</jakartaee-api.version>
 		
+		<swagger-parser.version>2.1.5</swagger-parser.version>
 		<log4j-to-slf4j.version>2.20.0</log4j-to-slf4j.version>
 		<equalsverifier.version>3.14.1</equalsverifier.version>
 	</properties>
