--- a/pom.xml
+++ b/pom.xml
@@ -86,6 +86,7 @@
 		<module>jeaf-generator-test-services-impl</module>
 		<module>jeaf-generator-test-services-impl-runtime</module>
 		<module>jeaf-generator-test-junit-testcases</module>
+		<module>jeaf-generator-test-open-api-dependent-spec</module>
 		<module>jeaf-generator-test-open-api</module>
 		<module>jeaf-generator-test-open-api-service-objects</module>
 		<module>jeaf-generator-test-open-api-internal-service-objects</module>
