--- a/jeaf-generator-test-open-api-internal-service-objects/pom.xml
+++ b/jeaf-generator-test-open-api-internal-service-objects/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>com.anaptecs.jeaf.generator</groupId>
 		<artifactId>jeaf-generator-project</artifactId>
-		<version>1.9.3</version>
+		<version>1.9.4-SNAPSHOT</version>
 	</parent>
 
 	<name>JEAF Generator Test OpenAPI Internal Service Objects</name>
