Finalized implementation and test of breaking changes report.

--- a/jeaf-generator-test-deprecation-report/pom.xml
+++ b/jeaf-generator-test-deprecation-report/pom.xml
@@ -57,6 +57,7 @@
 					</packages>
 
 					<!-- Define what should be generated. By default nothing is generated. -->
+					<generateBreakingChangesReport>true</generateBreakingChangesReport>
 					<generateRESTDeprecationReport>true</generateRESTDeprecationReport>
 					<generateJavaDeprecationReport>true</generateJavaDeprecationReport>
 					<javaDeprecationReportName>My Java Deprecation Report</javaDeprecationReportName>
