--- a/pom.xml
+++ b/pom.xml
@@ -45,12 +45,12 @@
 		<jeaf.validation.impl.version>1.8.0</jeaf.validation.impl.version>
 		<jeaf.rest.api.version>1.8.0</jeaf.rest.api.version>
 		<jeaf.rest.impl.version>1.8.0</jeaf.rest.impl.version>
-		<jeaf.test.model.version>1.0.77</jeaf.test.model.version>
+		<jeaf.test.model.version>1.0.78-SNAPSHOT</jeaf.test.model.version>
 		<jeaf.generator.messages.version>1.6.7</jeaf.generator.messages.version>
 		
 		<!-- Please be aware that Spring Boot and Spring core versions must match together -->
-		<spring.boot.version>2.7.13</spring.boot.version>
-		<spring.core.version>5.3.28</spring.core.version>
+		<spring.boot.version>2.7.14</spring.boot.version>
+		<spring.core.version>5.3.29</spring.core.version>
 		<jakartaee-api.version>9.1.0</jakartaee-api.version>
 		
 		<swagger-parser.version>2.1.16</swagger-parser.version>
