--- a/jeaf-generator-test-service-objects-jakarta/src-gen/main/resources/base/product-base.yml
+++ b/jeaf-generator-test-service-objects-jakarta/src-gen/main/resources/base/product-base.yml
@@ -321,7 +321,7 @@ components:
         discountOffers:
           type: array
           items:
-            type: #/components/schemas/StringCodeType
+            type: '#/components/schemas/StringCodeType'
           deprecated: true
           nullable: true
 
@@ -638,7 +638,7 @@ components:
         campaigns:
           type: array
           items:
-            type: #/components/schemas/StringCodeType
+            type: '#/components/schemas/StringCodeType'
           deprecated: true
           nullable: true
 
@@ -889,7 +889,7 @@ components:
             evenMoreLinks:
               type: array
               items:
-                type: #/components/schemas/StringCodeType
+                type: '#/components/schemas/StringCodeType'
               deprecated: true
               nullable: true
             stops:
@@ -1700,7 +1700,7 @@ components:
           minimum: 0
           nullable: false
         theSoftLink:
-          type: #/components/schemas/StringCodeType
+          type: '#/components/schemas/StringCodeType'
           nullable: false
 
     # com.anaptecs.jeaf.junit.openapi.base.StopPlaceRef
