--- a/jeaf-generator-test-spring/pom.xml
+++ b/jeaf-generator-test-spring/pom.xml
@@ -50,12 +50,25 @@
 		    <version>${spring.boot.version}</version>
 		</dependency>
 
+		<dependency>
+		    <groupId>org.springframework.boot</groupId>
+		    <artifactId>spring-boot-starter-security</artifactId>
+		    <version>${spring.boot.version}</version>
+		</dependency>
+		
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
             <version>${spring.boot.version}</version>
             <scope>test</scope>            
         </dependency>
+
+		<dependency>
+		    <groupId>org.springframework.security</groupId>
+		    <artifactId>spring-security-test</artifactId>
+            <version>${spring.security.version}</version>
+            <scope>test</scope>            
+		</dependency>
 
 		<dependency>
 			<groupId>javax.validation</groupId>
@@ -153,6 +166,7 @@
 					<targetRuntime>SPRING</targetRuntime>
 					<restLibrary>SPRING_WEB_MVC</restLibrary>
 					<generateRESTResources>true</generateRESTResources>
+					<generateSecurityAnnotation>true</generateSecurityAnnotation>
 					<generateRESTRequestValidation>true</generateRESTRequestValidation>
 					<generateRESTResponseValidation>true</generateRESTResponseValidation>
 					<restPathPrefix>/nova/prefix</restPathPrefix>
