--- a/pom.xml
+++ b/pom.xml
@@ -49,8 +49,9 @@
 		<jeaf.generator.messages.version>1.6.7</jeaf.generator.messages.version>
 		
 		<!-- Please be aware that Spring Boot and Spring core versions must match together -->
-		<spring.boot.version>2.7.14</spring.boot.version>
+		<spring.boot.version>2.7.15</spring.boot.version>
 		<spring.core.version>5.3.29</spring.core.version>
+		<spring.security.version>5.7.10</spring.security.version>
 		<jakartaee-api.version>9.1.0</jakartaee-api.version>
 		
 		<swagger-parser.version>2.1.16</swagger-parser.version>
