--- a/jeaf-generator-test-spring-boot3/pom.xml
+++ b/jeaf-generator-test-spring-boot3/pom.xml
@@ -191,6 +191,9 @@
 					-->
 					<suppressTechnicalHeaders>true</suppressTechnicalHeaders>
 
+					<generateOpenAPISpec>true</generateOpenAPISpec>
+					<validateOpenAPISpec>true</validateOpenAPISpec>
+
 					<!-- Define information that are written to file headers -->
 					<fileHeaderCompany>anaptecs GmbH, Ricarda-Huch-Str. 71, 72760 Reutlingen, Germany</fileHeaderCompany>
 					<fileHeaderAuthor>JEAF Generator</fileHeaderAuthor>
