--- a/pom.xml
+++ b/pom.xml
@@ -43,9 +43,9 @@
 		<jeaf.jersey.extensions.version>1.8.0</jeaf.jersey.extensions.version>
 		<jeaf.validation.api.version>1.8.0</jeaf.validation.api.version>
 		<jeaf.validation.impl.version>1.8.0</jeaf.validation.impl.version>
-		<jeaf.rest.api.version>1.8.0</jeaf.rest.api.version>
-		<jeaf.rest.impl.version>1.8.0</jeaf.rest.impl.version>
-		<jeaf.test.model.version>1.0.79</jeaf.test.model.version>
+		<jeaf.rest.api.version>1.8.1-SNAPSHOT</jeaf.rest.api.version>
+		<jeaf.rest.impl.version>1.8.1-SNAPSHOT</jeaf.rest.impl.version>
+		<jeaf.test.model.version>1.0.80-SNAPSHOT</jeaf.test.model.version>
 		<jeaf.generator.messages.version>1.6.7</jeaf.generator.messages.version>
 		
 		<!-- Please be aware that Spring Boot and Spring core versions must match together -->
