--- a/jeaf-generator-code-styles/pom.xml
+++ b/jeaf-generator-code-styles/pom.xml
@@ -3,7 +3,7 @@
     <parent>
 		<groupId>com.anaptecs.jeaf.generator</groupId>
 		<artifactId>jeaf-generator-project</artifactId>
-		<version>1.12.2-SNAPSHOT</version>
+		<version>1.12.2</version>
     </parent>
 
     <name>JEAF Generator Code Styles</name>
