--- a/jeaf-generator-test-custom-extension-usage/pom.xml
+++ b/jeaf-generator-test-custom-extension-usage/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>com.anaptecs.jeaf.generator</groupId>
 		<artifactId>jeaf-generator-project</artifactId>
-		<version>1.12.2</version>
+		<version>1.12.3-SNAPSHOT</version>
 	</parent>
 
 	<name>JEAF Generator Test Custom Extension Usage</name>
