--- a/jeaf-generator-test-deprecation-report/pom.xml
+++ b/jeaf-generator-test-deprecation-report/pom.xml
@@ -62,7 +62,7 @@
 					<typesReportShowAlias>true</typesReportShowAlias>
 					<typesReportAliasRowName>Legacy Name</typesReportAliasRowName>
 					<typesReportShowPackage>true</typesReportShowPackage>
-					<typesReportStereotypes>POJO; ServiceObject</typesReportStereotypes>
+					<typesReportStereotypes>POJO; ServiceObject; JEAFEnumeration</typesReportStereotypes>
 					
 					<generateBreakingChangesReport>true</generateBreakingChangesReport>
 					<generateRESTDeprecationReport>true</generateRESTDeprecationReport>
