--- a/pom.xml
+++ b/pom.xml
@@ -45,8 +45,8 @@
 		<jeaf.validation.impl.version>1.8.0</jeaf.validation.impl.version>
 		<jeaf.rest.api.version>1.9.1</jeaf.rest.api.version>
 		<jeaf.rest.impl.version>1.9.1</jeaf.rest.impl.version>
-		<jeaf.test.model.version>1.0.82-SNAPSHOT</jeaf.test.model.version>
-		<jeaf.generator.messages.version>1.6.8-SNAPSHOT</jeaf.generator.messages.version>
+		<jeaf.test.model.version>1.0.82</jeaf.test.model.version>
+		<jeaf.generator.messages.version>1.6.8</jeaf.generator.messages.version>
 		
 		<!-- Please be aware that Spring Boot and Spring core versions must match together -->
 		<spring.boot.version>2.7.15</spring.boot.version>
