--- a/jeaf-message-constants-generator/pom.xml
+++ b/jeaf-message-constants-generator/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>com.anaptecs.jeaf.generator</groupId>
 		<artifactId>jeaf-generator-project</artifactId>
-		<version>1.12.4-SNAPSHOT</version>
+		<version>1.13.0</version>
 	</parent>
 
 	<name>JEAF Message Constants Generator</name>
