--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
 
 	<groupId>com.anaptecs.jeaf.generator</groupId>
 	<artifactId>jeaf-generator-project</artifactId>
-	<version>1.12.4-SNAPSHOT</version>
+	<version>1.13.0</version>
 	<packaging>pom</packaging>
 	<name>JEAF Generator Project</name>
 	<description>JEAF Generator can be used to generate different kinds of classes from UML Models and thus speed up and professionalize software development.</description>
@@ -21,7 +21,7 @@
 		<connection>scm:git:https://bitbucket.org/anaptecs/jeaf-generator.git</connection>
 		<developerConnection>scm:git:https://bitbucket.org/anaptecs/jeaf-generator.git</developerConnection>
 		<url>https://bitbucket.org/anaptecs/jeaf-generator</url>
-		<tag>jeaf-generator-project-1.11.0</tag>
+		<tag>jeaf-generator-project-1.13.0</tag>
 	</scm>
 	
 	<properties>
