--- a/jeaf-generator-test-open-api/pom.xml
+++ b/jeaf-generator-test-open-api/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>com.anaptecs.jeaf.generator</groupId>
 		<artifactId>jeaf-generator-project</artifactId>
-		<version>1.13.0</version>
+		<version>1.13.1-SNAPSHOT</version>
 	</parent>
 
 	<name>JEAF Generator Test OpenAPI</name>
