--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,7 @@
 		<connection>scm:git:https://bitbucket.org/anaptecs/jeaf-generator.git</connection>
 		<developerConnection>scm:git:https://bitbucket.org/anaptecs/jeaf-generator.git</developerConnection>
 		<url>https://bitbucket.org/anaptecs/jeaf-generator</url>
-		<tag>jeaf-generator-project-1.11.0</tag>
+		<tag>HEAD</tag>
 	</scm>
 	
 	<properties>
