--- a/jeaf-generator-test-service-providers-impl/pom.xml
+++ b/jeaf-generator-test-service-providers-impl/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>com.anaptecs.jeaf.generator</groupId>
 		<artifactId>jeaf-generator-project</artifactId>
-		<version>1.16.1-SNAPSHOT</version>
+		<version>1.16.1</version>
 	</parent>
 
 	<name>JEAF Generator Test Service Providers Impl</name>
