--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -30,7 +30,8 @@ jobs:
         distribution: 'temurin'
         cache: maven
     - name: Build with Maven (Java 17)
-      run: mvn -Duser.country=DE -Duser.language=de -B clean install --file pom.xml
+      run: mvn -B clean install --file pom.xml
+# -Duser.country=DE -Duser.language=de 
 
     - uses: actions/checkout@v3
     - name: Set up JDK 21
