Updated SCM links in POM.

--- a/pom.xml
+++ b/pom.xml
@@ -18,9 +18,9 @@
 	<url>https://www.anaptecs.de/jeaf</url>
 
 	<scm>
-		<connection>scm:git:https://bitbucket.org/anaptecs/jeaf-generator.git</connection>
-		<developerConnection>scm:git:https://bitbucket.org/anaptecs/jeaf-generator.git</developerConnection>
-		<url>https://bitbucket.org/anaptecs/jeaf-generator</url>
+		<connection>scm:git:https://github.com/anaptecs/jeaf-generator.git</connection>
+		<developerConnection>scm:git:https://github.com/anaptecs/jeaf-generator.git</developerConnection>
+		<url>https://github.com/anaptecs/jeaf-generator.git</url>
 		<tag>HEAD</tag>
 	</scm>
 	
