--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -30,8 +30,8 @@ jobs:
         distribution: 'temurin'
         cache: maven
     - name: Build with Maven (Java 17)
-      run: mvn -B clean install --file pom.xml
-# -Duser.country=DE -Duser.language=de 
+      run: mvn -Duser.country=DE -Duser.language=de -Duser.timezone="Europe/Germany" -B clean install --file pom.xml
+
 
     - uses: actions/checkout@v3
     - name: Set up JDK 21
