--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -41,7 +41,7 @@ jobs:
         distribution: 'temurin'
         cache: maven
     - name: Build with Maven (Java 21)
-      run: mvn -DskipTests -B clean install --file pom.xml
+      run: -Duser.country=DE -Duser.language=de -Duser.timezone="Europe/Berlin" -B clean install --file pom.xml
 
     - uses: actions/checkout@v3
     - name: Set up JDK 11
@@ -51,8 +51,8 @@ jobs:
         distribution: 'temurin'
         cache: maven
     - name: Build with Maven (Java 11)
-      run: mvn -DskipTests -B clean install --file pom.xml
+      run: mvn -Duser.country=DE -Duser.language=de -Duser.timezone="Europe/Berlin" -B clean install --file pom.xml
 
     # Optional: Uploads the full dependency graph to GitHub to improve the quality of Dependabot alerts this repository can receive
-    #- name: Update dependency graph
-    #  uses: advanced-security/maven-dependency-submission-action@571e99aab1055c2e71a1e2309b9691de18d6b7d6
+    - name: Update dependency graph
+      uses: advanced-security/maven-dependency-submission-action@571e99aab1055c2e71a1e2309b9691de18d6b7d6
