--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -41,7 +41,7 @@ jobs:
         distribution: 'temurin'
         cache: maven
     - name: Build with Maven (Java 21)
-      run: -Duser.country=DE -Duser.language=de -Duser.timezone="Europe/Berlin" -B clean install --file pom.xml
+      run: mvn -Duser.country=DE -Duser.language=de -Duser.timezone="Europe/Berlin" -B clean install --file pom.xml
 
     - uses: actions/checkout@v3
     - name: Set up JDK 11
