Improved naming of build files

--- a/.github/workflows/maven-java11.yml
+++ b/.github/workflows/maven-java11.yml
@@ -6,7 +6,7 @@
 # separate terms of service, privacy policy, and support
 # documentation.
 
-name: Maven Build
+name: Maven Build (Java 11)
 
 on:
   push:
