--- a/pom.xml
+++ b/pom.xml
@@ -15,12 +15,12 @@
 	<packaging>pom</packaging>
 	<name>JEAF Generator Project</name>
 	<description>JEAF Generator can be used to generate different kinds of classes from UML Models and thus speed up and professionalize software development.</description>
-	<url>https://www.anaptecs.de/jeaf</url>
+	<url>https://www.jeaf-generator.io</url>
 
 	<scm>
-		<connection>scm:git:https://bitbucket.org/anaptecs/jeaf-generator.git</connection>
-		<developerConnection>scm:git:https://bitbucket.org/anaptecs/jeaf-generator.git</developerConnection>
-		<url>https://bitbucket.org/anaptecs/jeaf-generator</url>
+		<connection>scm:git:https://github.com/anaptecs/jeaf-generator.git</connection>
+		<developerConnection>scm:git:https://github.com/anaptecs/jeaf-generator.git</developerConnection>
+		<url>https://github.com/anaptecs/jeaf-generator.git</url>
 		<tag>HEAD</tag>
 	</scm>
 	
