--- a/pom.xml
+++ b/pom.xml
@@ -45,7 +45,7 @@
 		<jeaf.validation.impl.version>1.8.0</jeaf.validation.impl.version>
 		<jeaf.rest.api.version>1.11.0</jeaf.rest.api.version>
 		<jeaf.rest.impl.version>1.11.0</jeaf.rest.impl.version>
-		<jeaf.test.model.version>1.0.85</jeaf.test.model.version>
+		<jeaf.test.model.version>1.0.86-SNAPSHOT</jeaf.test.model.version>
 		<jeaf.generator.messages.version>1.6.8</jeaf.generator.messages.version>
 		
 		<!-- Please be aware that Spring Boot and Spring core versions must match together -->
@@ -54,7 +54,7 @@
 		<spring.security.version>5.7.10</spring.security.version>
 		<jakartaee-api.version>9.1.0</jakartaee-api.version>
 		
-		<swagger-parser.version>2.1.16</swagger-parser.version>
+		<swagger-parser.version>2.1.20</swagger-parser.version>
 		<log4j-to-slf4j.version>2.20.0</log4j-to-slf4j.version>
 		<equalsverifier.version>3.14.3</equalsverifier.version>
 		<flexmark.version>0.64.8</flexmark.version>
