--- a/jeaf-generator-test-custom-extension-usage/src-gen/main/resources/products/product-services.yml
+++ b/jeaf-generator-test-custom-extension-usage/src-gen/main/resources/products/product-services.yml
@@ -1410,12 +1410,13 @@ paths:
           in: header
           description: >-
             long values as multivalued  header
-          required: true
           schema:
-            type: integer
-            format: int64
+            type: array
             minimum: 3270
             maximum: 4711
+            items:
+              type: integer
+              format: int64
         - name: pTheEnum
           in: query
           required: true
@@ -1486,12 +1487,13 @@ paths:
           in: header
           description: >-
             long values as multivalued  header
-          required: true
           schema:
-            type: integer
-            format: int64
+            type: array
             minimum: 3270
             maximum: 4711
+            items:
+              type: integer
+              format: int64
         - name: The-Header
           in: header
           required: true
